# viste-tool-svn

branches/avilanova/: CMakeLists.txt
branches/avilanova/libs/HARDI/: SphereTriangulator.h
branches/avilanova/libs/HWShading/: ShaderText.cmake  vtkFiberMapper.cxx  vtkFragmentShader.h  vtkMyShaderProgram.h  vtkMyShaderProgramReader.cxx  vtkShaderBaseHandle.cxx  vtkShaderManager.cxx  vtkShaderUniformCollection.cxx  vtkShadowMappingHelper.h  vtkShadowMappingHelperLines.cxx  vtkShadowMappingSP.cxx  vtkUniformBool.h  vtkUniformFloatArray.cxx
branches/avilanova/libs/Helpers/: CMakeLists.txt  TransformationMatrixIO.h  vtkDoubleToUCharFilter.h  vtkImageDataInterpolator.h  vtkImageSliceActor.cxx  vtkPointClassification.cxx  vtkPointClassification.h  vtkThresholdMask.cxx
branches/avilanova/libs/TensorMath/: DistanceMeasures.cxx  Invariants.cxx  vtkTensorStatistics.cxx
branches/avilanova/plugins/: CMakeLists.txt
branches/avilanova/plugins/stable/: CMakeLists.txt
branches/avilanova/plugins/testing/: CMakeLists.txt
branches/avilanova/tool/: DTITool.h
branches/avilanova/tool/core/: DTIToolSettings.cxx  SimpleCoreInterface.h  UserOutput.cxx  vtkTextProgressCommand.h
branches/avilanova/tool/data/: Reader.h
branches/avilanova/tool/gui/: CMakeLists.txt  DataDialog.cxx  DataDialog.h
branches/avilanova/tool/plugin/: AdvancedPlugin.cxx  GUIInterfaces.h  Manager.cxx  Manager.h  PluginInterfaces.h
branches/bknippenberg/: CMakeLists.txt
branches/bknippenberg/libs/HARDI/: HARDIMath.h  HARDIMeasures.h
branches/bknippenberg/libs/HWShading/: CMakeLists.txt  ExtensionInitialize.h  vtkAnisoLiShadowMapSP.cxx  vtkAnisotropicLightingSP.cxx  vtkEigensystemToGPU.h  vtkFBO.h  vtkFBO_EXT.cxx  vtkFragmentShader.cxx  vtkMyShaderProgram.cxx  vtkMyShaderProgramReader.h  vtkShaderBase.h  vtkShaderObject.cxx  vtkShaderObject.h  vtkShaderUniform.h  vtkShaderUniformCollection.h  vtkShadowMapRenderer.h  vtkShadowMappingHelperLines.h  vtkShadowMappingSP.h  vtkShadowRenderer.cxx  vtkShadowRenderer.h  vtkShadowRendererSandia.cxx  vtkUniformInt.h  vtkUniformIvec3.cxx  vtkUniformSampler.h  vtkUniformVec4.h  vtkVertexShader.h
branches/bknippenberg/libs/Helpers/: CMakeLists.txt  TransformationMatrixIO.cxx  vtkDTIComponentReader.h  vtkDoubleToUCharFilter.cxx  vtkImageDataInterpolator.cxx  vtkImageSliceActor.h  vtkStreamlineToSimplifiedStreamline.cxx  vtkStreamlineToSimplifiedStreamline.h  vtkThresholdMask.h
branches/bknippenberg/libs/NIfTI/: CMakeLists.txt  nifti1_io.h
branches/bknippenberg/libs/TensorMath/: AnisotropyMeasures.cxx  CMakeLists.txt  DistanceMeasures.h  Invariants.h  vtkTensorMath.h
branches/bknippenberg/plugins/stable/: CMakeLists.txt
branches/bknippenberg/plugins/testing/: CMakeLists.txt
branches/bknippenberg/rules/: coding.txt  doc.txt
branches/bknippenberg/tool/: CMakeLists.txt  DTITool.h
branches/bknippenberg/tool/core/: Core.cxx  Core.h  DTIToolSettings.h  QVTKProgressCommand.h  SimpleCoreInterface.h  vtkTextProgressCommand.h
branches/bknippenberg/tool/data/: Attributes.h  Consumer.h  DataSet.cxx  DataSet.h  Manager.h  Reader.h
branches/bknippenberg/tool/gui/: CMakeLists.txt  DefaultProfileDialog.h  MainWindow.cxx  MainWindow.h  MainWindowInterface.h  PluginDialog.cxx  PluginDialog.h  ProfileManager.cxx  SettingsDialog.cxx  Settings_GUIShortcutsPageWidget.cxx  mainwindow.ui
branches/bknippenberg/tool/plugin/: AdvancedPlugin.h  Manager.cxx  Manager.h  Plugin.cxx
branches/myusufoglu/libs/NIfTI/: CMakeLists.txt  nifti1_io.c  vtkNiftiWriter.cxx
branches/myusufoglu/tool/: CMakeLists.txt
branches/myusufoglu/tool/core/: Core.cxx  Core.h  DTIToolProfile.h  DTIToolSettings.cxx  QVTKProgressCommand.cxx  UserOutput.h
branches/myusufoglu/tool/data/: CMakeLists.txt  DataSet.cxx  Manager.cxx
branches/myusufoglu/tool/gui/: CMakeLists.txt  DataDialog.cxx  DataDialog.h  MainWindow.cxx  MainWindow.h  MainWindow.ui  ProfileManager.cxx  ProfileManager.h  SaveDialog.cxx  SaveDialog.h
branches/myusufoglu/tool/plugin/: AdvancedPlugin.cxx  Manager.cxx  Plugin.cxx
branches/rbrecheisen/: CMakeLists.txt  settings_tilburg.xml
branches/rbrecheisen/libs/: CMakeLists.txt
branches/rbrecheisen/libs/HARDI/: SphereTriangulator.cxx
branches/rbrecheisen/libs/HWShading/: vtkAnisoLiShadowMapSP.h  vtkAnisotropicLightingSP.h  vtkEigensystemToGPU.cxx  vtkFiberMapper.h  vtkShaderBase.cxx  vtkShaderBaseHandle.h  vtkShaderManager.h  vtkShaderObjectCollection.cxx  vtkShaderObjectCollection.h  vtkUniformBool.cxx  vtkUniformFloat.h  vtkUniformFloatArray.h  vtkUniformInt.cxx  vtkUniformVec3.cxx  vtkUniformVec3.h  (+2 more)
branches/rbrecheisen/tool/: CMakeLists.txt
branches/vprckovska/libs/: CMakeLists.txt
trunk/: CMakeLists.txt  Doxyfile  FixQtDBusProblem.sh
trunk/libs/: CMakeLists.txt
trunk/libs/HARDI/: HARDIMeasures.cxx  SphereTriangulator.cxx  sphereTesselator.cxx  triangle.cxx  vertex.cxx
trunk/libs/HWShading/: vtkAnisoLiShadowMapSP.h  vtkAnisotropicLightingSP.h  vtkMyShaderProgramReader.h  vtkShaderManager.cxx  vtkShaderObjectCollection.cxx  vtkShadowMappingHelperLines.cxx  vtkShadowRenderer.cxx  vtkUniformFloatArray.cxx  vtkUniformIvec3.h  vtkUniformSampler.h  vtkUniformVec3.h
trunk/libs/Helpers/: CMakeLists.txt  TransformationMatrixIO.h  vtkDTIComponentReader.cxx  vtkImageDataInterpolator.h  vtkImageOrthogonalSlicesActor.cxx  vtkImageOrthogonalSlicesActor.h  vtkStreamlineToSimplifiedStreamline.h
trunk/libs/NIfTI/: nifti1.h  znzlib.h
trunk/libs/TensorMath/: AnisotropyMeasures.cxx  Invariants.cxx  Invariants.h  ScalarMeasures.cxx  vtkTensorMath.h
trunk/plugins/stable/: CMakeLists.txt
trunk/plugins/testing/: CMakeLists.txt
trunk/tool/core/: QVTKProgressCommand.h  UserOutput.cxx  UserOutput.h  XMLSettingsWriter.h  vtkTextProgressCommand.cxx  vtkTextProgressCommand.h
trunk/tool/data/: Manager.h  Writer.h
trunk/tool/gui/: DataDialog.h  DefaultProfileDialog.cxx  DefaultProfileDialog.h  MainWindow.cxx  MainWindow.h  ProfileManager.cxx  ProfileManager.h  SaveDialog.cxx  SaveDialog.h  Settings_GeneralPageWidget.cxx
trunk/tool/plugin/: DataInterfaces.h  PluginInterfaces.h
(+1575 files in other folders)
