add_subdirectory( examples )

add_subdirectory( AxesVisualization )
add_subdirectory( Clustering )
add_subdirectory( ConnectivityMeasures )
add_subdirectory( DTIMeasures )
add_subdirectory( DTIReader )
add_subdirectory( FiberCutting )
add_subdirectory( FiberFilter )
add_subdirectory( FiberOutput )
add_subdirectory( FiberTracking )
add_subdirectory( FiberVisualization )
add_subdirectory( GeometryGlyphs )
add_subdirectory( GpuGlyphs )
add_subdirectory( HARDIConverter )
add_subdirectory( HARDIConvolutions )
add_subdirectory( HARDIMeasures )
add_subdirectory( HARDIReader )
add_subdirectory( IllustrativeClusters )
add_subdirectory( NiftiReader )
add_subdirectory( PlanesVisualization )
add_subdirectory( RayCast )
add_subdirectory( RoiDraw )
add_subdirectory( Seeding )
add_subdirectory( StructuredPointsReader )
add_subdirectory( TransferFunction )
add_subdirectory( TransferFunctionReader )
add_subdirectory( Transformation )
add_subdirectory( VolumeReader )
add_subdirectory( VtiReader )
