add_subdirectory( examples )

add_subdirectory( DTIReader )
add_subdirectory( DTIMeasures )
add_subdirectory( FiberTracking )
add_subdirectory( Seeding )
add_subdirectory( StructuredPointsReader )
add_subdirectory( HARDIReader )
add_subdirectory( FiberCutting )
add_subdirectory( FiberOutput )
add_subdirectory( FiberFilter )
add_subdirectory( FiberVisualization )
add_subdirectory( TransferFunction )
add_subdirectory( TransferFunctionReader )
add_subdirectory( VolumeReader )
